math-core/tests/snapshots/wiki_test__wiki002.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\{1,e,\\pi\\}"
---
<math>
    <mo stretchy="false">{</mo>
    <mn>1</mn>
    <mo>,</mo>
    <mi>e</mi>
    <mo>,</mo>
    <mi>π</mi>
    <mo stretchy="false">}</mo>
</math>
