math-core/tests/snapshots/wiki_test__wiki005.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\dot{a}, \\ddot{a}, \\acute{a}, \\grave{a}"
---
<math>
    <mover>
        <mi>a</mi>
        <mo accent="true">˙</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>a</mi>
        <mo accent="true">¨</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>a</mi>
        <mo accent="true">´</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>a</mi>
        <mo accent="true">`</mo>
    </mover>
</math>
