math-core/tests/snapshots/wiki_test__wiki006.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\dot{a}, \\ddot{a}, \\acute{a}, \\grave{a}"
---
<math>
    <mover accent="true">
        <mi>a</mi>
        <mo>˙</mo>
    </mover>
    <mo>,</mo>
    <mover accent="true">
        <mi>a</mi>
        <mo>¨</mo>
    </mover>
    <mo>,</mo>
    <mover accent="true">
        <mi>a</mi>
        <mo>´</mo>
    </mover>
    <mo>,</mo>
    <mover accent="true">
        <mi>a</mi>
        <mo>`</mo>
    </mover>
</math>
