math-core/tests/snapshots/wiki_test__wiki007.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\check{a}, \\breve{a}, \\tilde{a}, \\bar{a}"
---
<math>
    <mover accent="true">
        <mi>a</mi>
        <mo stretchy="false">ˇ</mo>
    </mover>
    <mo>,</mo>
    <mover accent="true">
        <mi>a</mi>
        <mo>˘</mo>
    </mover>
    <mo>,</mo>
    <mover accent="true">
        <mi>a</mi>
        <mo stretchy="false">̃</mo>
    </mover>
    <mo>,</mo>
    <mover accent="true">
        <mi>a</mi>
        <mo stretchy="false">¯</mo>
    </mover>
</math>
