math-core/tests/snapshots/wiki_test__wiki009.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\exp_a b = a^b, \\exp b = e^b, 10^m"
---
<math>
    <msub>
        <mi>exp</mi>
        <mi>a</mi>
    </msub>
    <mi>b</mi>
    <mo>=</mo>
    <msup>
        <mi>a</mi>
        <mi>b</mi>
    </msup>
    <mo>,</mo>
    <mi>exp</mi>
    <mi>b</mi>
    <mo>=</mo>
    <msup>
        <mi>e</mi>
        <mi>b</mi>
    </msup>
    <mo>,</mo>
    <msup>
        <mn>10</mn>
        <mi>m</mi>
    </msup>
</math>
