math-core/tests/snapshots/wiki_test__wiki010.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\ln c, \\lg d = \\log e, \\log_{10} f"
---
<math>
    <mo lspace="0" rspace="0.1667em">ln</mo>
    <mi>c</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">lg</mo>
    <mi>d</mi>
    <mo>=</mo>
    <mo lspace="0" rspace="0.1667em">log</mo>
    <mi>e</mi>
    <mo>,</mo>
    <msub>
        <mo lspace="0" rspace="0.1667em">log</mo>
        <mn>10</mn>
    </msub>
    <mi>f</mi>
</math>
